Add more to README

--- a/README.html
+++ b/README.html
@@ -365,7 +365,16 @@ code {
           : 'default'
     });
   </script>
-<p>Hi All</p>
+<p>👋 Heyo 👋</p>
+<p>Thanks for popping in. My name is Mark Sadegi and I'm thankful everyday to be able to earn a living from programming! Below are some public repos that I occasionally improve and often refer to when I want to reference a concept. Also, a link to my portfolio and sample writings are listed.</p>
+<h2 id="notable-pubic-repos">Notable Pubic Repos</h2>
+<ol>
+<li><a href="https://github.com/marka2g/bike_shop">Bike Shop</a>: A demo e-commerce app with a basic example of how to build a shopping cart with <a href="https://hexdocs.pm/elixir/GenServer.html">GenServer</a>.</li>
+<li><a href="https://github.com/marka2g/event_ingestor">EventIngestor</a>: A demo repo to simulate an app which will ingest a high-volume of events that could come from a device, user behavior, machine on a factory floor, etc.  Built with Elixir</li>
+</ol>
+<h2 id="portfolio">Portfolio</h2>
+<p><a href="www.marksadegi.com">www.marksadegi.com</a>{:target=&quot;_blank&quot;}: <strong>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</strong><br>
+<img src="highlight_tech.png" alt="highlight tech"></p>
 
 </body>
 </html>
