--- a/README.html
+++ b/README.html
@@ -373,8 +373,11 @@ code {
 <li><a href="https://github.com/marka2g/event_ingestor">EventIngestor</a>: A demo repo to simulate an app which will ingest a high-volume of events that could come from a device, user behavior, machine on a factory floor, etc.  Built with Elixir</li>
 </ol>
 <h2 id="portfolio">Portfolio</h2>
-<p><a href="www.marksadegi.com">www.marksadegi.com</a>{:target=&quot;_blank&quot;}: <strong>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</strong><br>
+<p><a href="marksadegi.com" target="_blank">www.marksadegi.com</a></p>
+<blockquote>
+<p><strong>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</strong><br>
 <img src="highlight_tech.png" alt="highlight tech"></p>
+</blockquote>
 
 </body>
 </html>
