add rel noopener

--- a/README.html
+++ b/README.html
@@ -373,7 +373,7 @@ code {
 <li><a href="https://github.com/marka2g/event_ingestor">EventIngestor</a>: A demo repo to simulate an app which will ingest a high-volume of events that could come from a device, user behavior, machine on a factory floor, etc.  Built with Elixir</li>
 </ol>
 <h2 id="portfolio">Portfolio</h2>
-<p><a href="www.marksadegi.com">https://www.marksadegi.com</a>{target=&quot;_blank&quot;}</p>
+<p><a href="www.marksadegi.com">https://www.marksadegi.com</a>{:target=&quot;_blank&quot; rel=&quot;noopener&quot;}</p>
 <blockquote>
 <p><strong>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</strong><br>
 <img src="highlight_tech.png" alt="highlight tech"></p>
