--- a/README.html
+++ b/README.html
@@ -375,7 +375,7 @@ code {
 <h2 id="portfolio">Portfolio</h2>
 <p><a href="https://www.marksadegi.com">marksadegi.com</a></p>
 <blockquote>
-<p><strong>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</strong><br>
+<p><em>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</em><br>
 <img src="highlight_tech.png" alt="highlight tech"></p>
 </blockquote>
 
