add writings to README

--- a/README.html
+++ b/README.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <p>👋 Heyo 👋</p>
-<p>Thanks for popping in. My name is Mark Sadegi and I'm thankful everyday to be able to earn a living from programming! Below are some public repos that I occasionally improve and often refer to when I want to reference a concept. Also, a link to my portfolio and sample writings are listed.</p>
+<p>Thanks for popping in. My name is Mark Sadegi and I'm thankful everyday to be able to earn a living from programming! Below are some public repos that I occasionally improve and often refer to when I want to reference a concept. Also, a link to my portfolio and sample writings are listed too.</p>
 <h2 id="notable-pubic-repos">Notable Pubic Repos</h2>
 <ol>
 <li><a href="https://github.com/marka2g/bike_shop">Bike Shop</a>: A demo e-commerce app with a basic example of how to build a shopping cart with <a href="https://hexdocs.pm/elixir/GenServer.html">GenServer</a>.</li>
@@ -378,6 +378,8 @@ code {
 <p><em>Rollover the individual responsibilities to highlight all the technologies used for that responsibility.</em><br>
 <img src="highlight_tech.png" alt="highlight tech"></p>
 </blockquote>
+<h2 id="writings">Writings</h2>
+<p><a href="https://marksmarkdown.com/elevator-pitch.html">marksmarkdown.com</a></p>
 
 </body>
 </html>
