add influence ave

--- a/README.html
+++ b/README.html
@@ -371,7 +371,10 @@ code {
 <ol>
 <li><a href="https://github.com/marka2g/bike_shop">Bike Shop</a>: A demo e-commerce app with a basic example of how to build a shopping cart with <a href="https://hexdocs.pm/elixir/GenServer.html">GenServer</a>.</li>
 <li><a href="https://github.com/marka2g/event_ingestor">EventIngestor</a>: A demo repo to simulate an app which will ingest a high-volume of events that could come from a device, user behavior, machine on a factory floor, etc.  Built with Elixir</li>
+<li><a href="https://github.com/marka2g/influence_avenue">Influence Ave</a>: A demo repo to practice parsing through a large dataset with Elixir <a href="https://hexdocs.pm/elixir/Stream.html"><code>Stream</code></a></li>
 </ol>
+<!-- 4. widgmart -->
+<!-- 5. [Citizen Uprise](https://github.com/marka2g/citizen_uprise) -->
 <h2 id="portfolio">Portfolio</h2>
 <p><a href="https://www.marksadegi.com">marksadegi.com</a></p>
 <blockquote>
